@@ -11,29 +11,32 @@
 
 #include "wx/object.h"
 
+class wxWindow;
+
 class wxToolTip : public wxObject
 {
 public:
     // ctor & dtor
-    wxToolTip(const wxString &tip) : m_text(tip), m_window(0) {}
-    virtual ~wxToolTip() {}
+    wxToolTip(const wxString &tip);
+    virtual ~wxToolTip();
 
     // accessors
         // tip text
-    void SetTip(const wxString& tip)	{ m_text = tip; }
-    const wxString& GetTip() const { return m_text; }
+    void SetTip(const wxString& tip);
+    const wxString& GetTip() const;
 
         // the window we're associated with
-    wxWindow *GetWindow() const { return m_window; }
+    wxWindow *GetWindow() const;
 
     // controlling tooltip behaviour: globally change tooltip parameters
         // enable or disable the tooltips globally
-    static void Enable(bool flag) {}
+    static void Enable(bool flag);
         // set the delay after which the tooltip appears
-    static void SetDelay(long milliseconds) {}
+    static void SetDelay(long milliseconds);
 
 private:
-    void SetWindow(wxWindow* window) {m_window = window;}
+    void SetWindow(wxWindow* window);
+
     friend class wxWindow;
 
     wxString  m_text;           // tooltip text
